--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 title: IEEE Digital Twin 2025
+sponsors:
+  - image: /assets/images/ieee mb black png.png
+  - image: /assets/images/cis-logo.png
+  - image: /assets/images/IEEE-CS_LogoTM-orange.png
+  - image: /assets/images/SWTC2.png
 ---
 
 <!-- Hero Section -->
@@ -17,7 +22,7 @@ title: IEEE Digital Twin 2025
 >
   <div class="hero-section" style="min-height: 60vh">
     <div
-      class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
+      class="page-section container px-3 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
         The 2025 IEEE International Conference on Digital Twin (Hybrid)
@@ -36,7 +41,7 @@ title: IEEE Digital Twin 2025
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-2"
+  class="page-section container-fluid px-3 pt-3 pb-5 mt-2 d-flex flex-column gap-2"
 >
   <div>
     <div class="alert alert-success" role="alert">
@@ -421,34 +426,4 @@ title: IEEE Digital Twin 2025
   {% include colocated-conferences.html %}
 </section>
 
-<section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
->
-  <h2 class="fs-2 text-center">Sponsors</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/cis-logo.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/SWTC2.png" class="mh-100" />
-    </div>
-  </div>
-</section>
+{% include sponsors.html sponsors=page.sponsors %}
