--- a/final-paper-instructions/index.html
+++ b/final-paper-instructions/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 title: IEEE SWC 2025 Final Paper Instructions
+sponsors:
+  - image: /assets/images/ieee mb black png.png
+  - image: /assets/images/cis-logo.png
+  - image: /assets/images/IEEE-CS_LogoTM-orange.png
 ---
 
 <!-- Hero Section -->
@@ -17,7 +21,7 @@ title: IEEE SWC 2025 Final Paper Instructions
 >
   <div class="hero-section" style="min-height: 70vh">
     <div
-      class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
+      class="page-section container px-3 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="w-75 responsive-width fw-bold text-center display-5">
         IEEE Smart World Congress 2025 <br />
@@ -28,7 +32,7 @@ title: IEEE SWC 2025 Final Paper Instructions
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4" id="final-submission">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+  <div class="page-section w-100 px-3 py-5 d-flex flex-column gap-4">
     <h3 class="fw-bold fs-3">
       <span style="color: red">Important</span>: Final paper and copyright
       submissions must be made through IEEE CPS (Conference Publishing
@@ -140,28 +144,4 @@ title: IEEE SWC 2025 Final Paper Instructions
   {% include colocated-conferences.html %}
 </section>
 
-<section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
->
-  <h2 class="fs-2 text-center">Sponsors</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/cis-logo.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
-    </div>
-  </div>
-</section>
+{% include sponsors.html sponsors=page.sponsors %}
