--- a/venue/calgary/index.html
+++ b/venue/calgary/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 title: Venue - Calgary
+sponsors:
+  - image: /assets/images/ieee mb black png.png
+  - image: /assets/images/cis-logo.png
+  - image: /assets/images/IEEE-CS_LogoTM-orange.png
 ---
 
 <!-- Hero Section -->
@@ -17,7 +21,7 @@ title: Venue - Calgary
 >
   <div class="hero-section">
     <div
-      class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
+      class="page-section container px-3 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">Calgary, Alberta, Canada</h1>
       <h3 class="w-75 responsive-width fw-medium text-center">
@@ -28,7 +32,7 @@ title: Venue - Calgary
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="row">
     <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
@@ -68,10 +72,10 @@ title: Venue - Calgary
   </div>
 </section>
 
-<div class="page-section px-5"><hr /></div>
+<div class="page-section px-3"><hr /></div>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="row">
     <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
@@ -104,10 +108,10 @@ title: Venue - Calgary
   </div>
 </section>
 
-<div class="page-section px-5"><hr /></div>
+<div class="page-section px-3"><hr /></div>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="row">
     <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
@@ -138,10 +142,10 @@ title: Venue - Calgary
   </div>
 </section>
 
-<div class="page-section px-5"><hr /></div>
+<div class="page-section px-3"><hr /></div>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="row">
     <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
@@ -189,28 +193,4 @@ title: Venue - Calgary
   {% include colocated-conferences.html %}
 </section>
 
-<section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
->
-  <h2 class="fs-2 text-center">Sponsors</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/cis-logo.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
-    </div>
-  </div>
-</section>
+{% include sponsors.html sponsors=page.sponsors %}
