--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 title: Home
+sponsors:
+  - image: /assets/images/ieee mb black png.png
+  - image: /assets/images/cis-logo.png
+  - image: /assets/images/IEEE-CS_LogoTM-orange.png
 ---
 
 <!-- Hero Section -->
@@ -17,7 +21,7 @@ title: Home
 >
   <div class="hero-section" style="min-height: 90vh !important">
     <div
-      class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
+      class="page-section container px-2 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-3 fw-bolder mt-5">
         IEEE Smart World Congress 2025 (Hybrid)
@@ -56,7 +60,7 @@ title: Home
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-3"
+  class="page-section container-fluid pt-3 px-4 pb-5 mt-2 d-flex flex-column gap-3"
 >
   <div>
     <div class="alert alert-success" role="alert">
@@ -80,8 +84,10 @@ title: Home
   </div>
   <div class="row">
     <div class="col-sm-8 mb-3 mb-sm-0 d-flex flex-column gap-4">
-      <h2 class="fs-2 mb-2">Join us at IEEE Smart World Congress 2025</h2>
-      <p class="fs-5">
+      <h2 class="fs-2 mb-2 text-center text-sm-start">
+        Join us at IEEE Smart World Congress 2025
+      </h2>
+      <p class="fs-5 text-center text-sm-start">
         We are thrilled to invite you to the IEEE Smart World Congress 2025, a
         premier event bringing together thought leaders and researchers in smart
         technologies. Held in the vibrant city of Calgary, Canada, from August
@@ -157,8 +163,8 @@ title: Home
   </div>
 </section>
 
-<section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-5 pb-5 d-flex flex-column gap-4">
+<section class="container-fluid d-flex flex-column px-4 gap-3 pb-5">
+  <div class="page-section w-100 d-flex flex-column gap-4">
     <hr />
     {% include whova-lg-row.html %}
   </div>
@@ -169,15 +175,15 @@ title: Home
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 pt-5">
-  <div class="page-section w-100 px-5 pb-5">
-    <h2 class="text-center fs-2">
+  <div class="page-section w-100 px-3 pb-5">
+    <h2 class="text-center text-sm-start fs-2">
       Join us at Industry Day and Explore how Innovators are Shaping the Future
     </h2>
-    <div class="row mb-5 pt-5">
+    <div class="row mb-5 pt-5 g-4">
       <div
         class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2"
       >
-        <p class="fs-5">
+        <p class="text-center text-sm-start fs-5">
           Join us at the 2025 IEEE Smart World Congress Industry Day, a dynamic
           gathering of global thought leaders, pioneering innovators, and
           economic development experts driving the next wave of smart
@@ -185,19 +191,21 @@ title: Home
           partnerships, and explore how industry and research are shaping the
           intelligent, interconnected world of tomorrow.
         </p>
-        <div class="d-flex flex-row">
+        <div
+          class="d-flex flex-row justify-content-center justify-content-sm-start"
+        >
           <a href="/program/industry-day/" class="btn btn-primary"
             >Learn More About Industry Day</a
           >
         </div>
       </div>
       <div
-        class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
-        style="max-height: 500px; overflow: hidden"
+        class="col-sm-6 py-2 d-flex justify-content-center align-items-center"
+        style="overflow: hidden"
       >
         <img
           src="/assets/images/xr-expo-ipDhOQ5gtEk-unsplash.jpg"
-          class="w-100 img-fluid"
+          class="w-100 h-100 object-fit-cover"
         />
       </div>
     </div>
@@ -205,7 +213,7 @@ title: Home
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+  <div class="page-section w-100 px-3 py-5 d-flex flex-column gap-4">
     <h2 class="fs-2 text-center">
       Attend Keynote Presentations by World-Renowned Researchers and Industry
       Professionals
@@ -216,7 +224,7 @@ title: Home
           <div
             class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
           >
-            <h4 class="fs-4 text-center">
+            <h4 class="fs-4">
               From Digital Twins to Generative Digital Twins: Towards a Novel
               Approach in the IoT Edge-Cloud Continuum
             </h4>
@@ -226,7 +234,7 @@ title: Home
               adaptive, and explanatory capabilities for smart city and IoT
               applications.
             </p>
-            <div class="text-center">
+            <div class="">
               <img
                 src="/assets/images/metaverse/g.jpg"
                 alt="Dr. Giancarlo Fortino"
@@ -242,12 +250,12 @@ title: Home
           </div>
         </div>
       </div>
-      <div class="col-md-4 mb-3 mb-sm-0">
+      <div class="col-md-4 mb-3 mb-sm-0 text-center">
         <div class="card bg-light-subtle h-100">
           <div
             class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
           >
-            <h4 class="fs-4 text-center">
+            <h4 class="fs-4">
               Intelligent Edge Sensing and Distributed Cognition Are
               Transforming the Future of Smart World
             </h4>
@@ -257,7 +265,7 @@ title: Home
               across domains like transportation, healthcare, and mobile
               crowdsensing.
             </p>
-            <div class="text-center">
+            <div class="">
               <img
                 src="/assets/images/Dr_Runhe_Huang.png"
                 alt="Dr. Runhe Huang"
@@ -276,18 +284,16 @@ title: Home
       <div class="col-md-4 mb-3 mb-sm-0">
         <div class="card bg-light-subtle h-100">
           <div
-            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2 text-center"
           >
-            <h4 class="fs-4 text-center">
-              LLM (LSM) Is Not Equal to the Third AI Wave
-            </h4>
+            <h4 class="fs-4">LLM (LSM) Is Not Equal to the Third AI Wave</h4>
             <p>
               Explore how the evolution of AI from its historical cycles to
               today's LLMs reveals both breakthroughs and barriers, and why
               diverse, reliable approaches are essential for the next wave of
               impactful, real-world AI solutions.
             </p>
-            <div class="text-center">
+            <div class="">
               <img
                 src="/assets/images/Chunsheng Yang.jpg"
                 alt="Dr. Chunsheng Yang"
@@ -308,11 +314,11 @@ title: Home
     </div>
     <div class="row">
       <div class="col-md-4 mb-3 mb-sm-0">
-        <div class="card bg-light-subtle h-100">
+        <div class="card bg-light-subtle h-100 text-center">
           <div
             class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
           >
-            <h4 class="fs-4 text-center">
+            <h4 class="fs-4">
               Women Leading the Smart World: Equity, Innovation, and the Power
               of Diverse Voices
             </h4>
@@ -322,7 +328,7 @@ title: Home
               creative approaches are essential for developing ethical,
               impactful solutions for a smarter, more sustainable future.
             </p>
-            <div class="text-center">
+            <div class="">
               <img
                 src="/assets/images/Shauna Zenteno.jpg"
                 alt="Dr. Shauna Zenteno"
@@ -346,16 +352,16 @@ title: Home
       <div class="col-md-4 mb-3 mb-sm-0">
         <div class="card bg-light-subtle h-100">
           <div
-            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2 text-center"
           >
-            <h4 class="fs-4 text-center">Industry Day Keynote: Jan Bradley</h4>
+            <h4 class="fs-4">Industry Day Keynote: Jan Bradley</h4>
             <p>
               Explore how the City of Calgary is transforming municipal services
               through AI, IoT, RPA, and digital infrastructure, showcasing its
               strategic, award-winning approach to building a smarter, more
               equitable city.
             </p>
-            <div class="text-center">
+            <div class="">
               <img
                 src="/assets/images/Bradley, Jan-3604.jpg"
                 alt="Jan Bradley"
@@ -378,16 +384,16 @@ title: Home
       <div class="col-md-4 mb-3 mb-sm-0">
         <div class="card bg-light-subtle h-100">
           <div
-            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2 text-center"
           >
-            <h4 class="fs-4 text-center">Industry Day Keynote: Martin Dinel</h4>
+            <h4 class="fs-4">Industry Day Keynote: Martin Dinel</h4>
             <p>
               Gain insight into Alberta's evolving cybersecurity landscape, from
               rising threats and key adversaries to the CyberAlberta program's
               strategic initiatives, as Martin outlines the province's vision to
               become a global leader in cyber resilience and talent development.
             </p>
-            <div class="text-center">
+            <div>
               <img
                 src="/assets/images/Headshot - Martin Dinel.jpg"
                 alt="Martin Dinel"
@@ -416,7 +422,7 @@ title: Home
 
 <section class="container-fluid d-flex flex-column gap-4">
   <div
-    class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+    class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
   >
     <div class="row text-center">
       <div class="col-12"><h2 class="fs-2 mb-2">Organizing Committee</h2></div>
@@ -721,7 +727,7 @@ title: Home
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+  <div class="page-section w-100 px-3 py-5 d-flex flex-column gap-4">
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4 text-center">
         <h2 class="fs-2 text-center">Topics Covered</h2>
@@ -765,7 +771,7 @@ title: Home
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+  <div class="page-section w-100 px-3 py-5 d-flex flex-column gap-4">
     <h2 class="fs-2 text-center">Previous IEEE Smart World Congress</h2>
     <div class="row pb-3">
       <div class="col-sm-4 mb-3 mb-sm-0">
@@ -817,13 +823,13 @@ title: Home
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-5 py-5">
+  <div class="page-section w-100 px-3 py-5">
     <h2 class="fs-2 text-center mb-5">
       Join us and Connect at a World Class Venue
     </h2>
-    <div class="row mb-5">
+    <div class="row mb-5 g-3">
       <div
-        class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2"
+        class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2 text-center text-sm-start"
       >
         <h3 class="">Calgary Telus Convention Center</h3>
         <p class="fs-5">
@@ -832,19 +838,21 @@ title: Home
           budget options. This proximity ensures that conference attendees have
           a range of accommodation choices within walking distance.
         </p>
-        <div class="d-flex flex-row">
+        <div
+          class="d-flex flex-row justify-content-center justify-content-sm-start"
+        >
           <a href="/venue/telus-convention-center" class="btn btn-primary"
             >Learn More</a
           >
         </div>
       </div>
       <div
-        class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
-        style="max-height: 500px; overflow: hidden"
+        class="col-sm-6 py-2 d-flex justify-content-center align-items-center"
+        style="overflow: hidden"
       >
         <img
           src="/assets/images/telus-convention-center.jpg"
-          class="w-100 img-fluid"
+          class="w-100 h-100 object-fit-cover"
         />
       </div>
     </div>
@@ -852,19 +860,19 @@ title: Home
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-5 py-5">
-    <div class="row">
+  <div class="page-section w-100 px-3 py-5">
+    <div class="row g-3">
       <div
-        class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
-        style="max-height: 500px; overflow: hidden"
+        class="order-sm-1 order-2 col-sm-6 py-2 d-flex justify-content-center align-items-end"
+        style="overflow: hidden"
       >
         <img
           src="/assets/images/sri-gowda-pdIe9hAcaP4-unsplash.jpg"
-          class="w-100 img-fluid"
+          class="w-100 h-100 object-fit-cover"
         />
       </div>
       <div
-        class="col-sm-6 d-flex flex-column gap-2 flex-sm-column justify-content-around"
+        class="order-1 order-sm-2 col-sm-6 d-flex flex-column gap-2 flex-sm-column justify-content-around text-center text-sm-start"
       >
         <h3 class="">Explore Stunning Calgary and Its Scenic Surroundings</h3>
         <p class="fs-5">
@@ -877,7 +885,9 @@ title: Home
           heritage, and offers stunning natural beauty, with easy access to the
           nearby Banff and Jasper national parks.
         </p>
-        <div class="d-flex flex-sm-row gap-2 flex-column">
+        <div
+          class="d-flex flex-sm-row gap-2 flex-column justify-content-center justify-content-sm-start"
+        >
           <a href="/venue/calgary" class="btn btn-primary">Learn More</a>
           <a href="/travel/banff-group-trip/" class="btn btn-primary"
             >Join a Group Trip to Banff</a
@@ -888,28 +898,4 @@ title: Home
   </div>
 </section>
 
-<section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
->
-  <h2 class="fs-2 text-center">Sponsors</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/cis-logo.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
-    </div>
-  </div>
-</section>
+{% include sponsors.html sponsors=page.sponsors %}
