--- a/keynotes/shauna-zenteno/index.html
+++ b/keynotes/shauna-zenteno/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 title: Keynotes - Dr. Shauna Zenteno
+sponsors:
+  - image: /assets/images/ieee mb black png.png
+  - image: /assets/images/cis-logo.png
+  - image: /assets/images/IEEE-CS_LogoTM-orange.png
 ---
 
 <!-- Hero Section -->
@@ -17,7 +21,7 @@ title: Keynotes - Dr. Shauna Zenteno
 >
   <div class="hero-section">
     <div
-      class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
+      class="page-section container px-3 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
         Women Leading the Smart World: Equity, Innovation, and the Power of
@@ -29,7 +33,7 @@ title: Keynotes - Dr. Shauna Zenteno
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="d-flex flex-column gap-4">
     <div class="row">
@@ -93,20 +97,21 @@ title: Keynotes - Dr. Shauna Zenteno
         <h4>Biography</h4>
         <p>
           Dr. Shauna Reckseidler-Zenteno is the Dean of the Faculty of Science
-          and Technology at Athabasca University since 2020. She is a Full Professor of Biology. She previously
-          served as the Vice Dean, Operations in the Faculty of Graduate Studies
-          at Athabasca University. As an academic and administrator, she has
-          designed and taught several courses in biology and microbiology,
-          developed innovations in open and online courses and programs, led
-          major initiatives in support of digital education and research,
-          overseen teaching and research growth in science, computing, and
-          architecture, expanded community engagement, and participated in major
-          institutional priorities and partnerships. Shauna completed a PhD in
-          Microbiology and Infectious Diseases from the University of Calgary.
-          Her research has been focused on bacterial genomics in understanding
-          diseases, bacterial biofilms, antibiotic resistance, and ecosystem
-          health. She has worked across disciplines to build communities and
-          innovative approaches through her leadership, teaching, and research.
+          and Technology at Athabasca University since 2020. She is a Full
+          Professor of Biology. She previously served as the Vice Dean,
+          Operations in the Faculty of Graduate Studies at Athabasca University.
+          As an academic and administrator, she has designed and taught several
+          courses in biology and microbiology, developed innovations in open and
+          online courses and programs, led major initiatives in support of
+          digital education and research, overseen teaching and research growth
+          in science, computing, and architecture, expanded community
+          engagement, and participated in major institutional priorities and
+          partnerships. Shauna completed a PhD in Microbiology and Infectious
+          Diseases from the University of Calgary. Her research has been focused
+          on bacterial genomics in understanding diseases, bacterial biofilms,
+          antibiotic resistance, and ecosystem health. She has worked across
+          disciplines to build communities and innovative approaches through her
+          leadership, teaching, and research.
         </p>
       </div>
     </div>
@@ -117,28 +122,4 @@ title: Keynotes - Dr. Shauna Zenteno
   {% include colocated-conferences.html %}
 </section>
 
-<section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
->
-  <h2 class="fs-2 text-center">Sponsors</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/cis-logo.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
-    </div>
-  </div>
-</section>
+{% include sponsors.html sponsors=page.sponsors %}
