--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -17,7 +17,7 @@ title: IEEE MVS 2025
 >
   <div class="hero-section">
     <div
-      class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
+      class="page-section container px-3 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
         IEEE International Conference on Metaverse 2025 (Hybrid)
@@ -36,7 +36,7 @@ title: IEEE MVS 2025
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-2"
+  class="page-section container-fluid px-3 pt-3 pb-5 mt-2 d-flex flex-column gap-2"
 >
   <div>
     <div class="alert alert-success" role="alert">
@@ -533,7 +533,7 @@ title: IEEE MVS 2025
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="row text-center">
     <div class="col-12"><h2 class="fs-2 mb-2">Honorary Chair</h2></div>
@@ -681,41 +681,26 @@ title: IEEE MVS 2025
 </section>
 
 <section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 py-5 d-flex flex-column gap-4"
 >
   <h2 class="fs-2 text-center">Sponsors</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
+  <div class="row justify-content-around g-5 pb-5">
+    <div class="col-auto d-flex justify-content-center" style="height: 50px">
       <img src="/assets/images/ieee mb black png.png" class="mh-100" />
     </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
+    <div class="col-auto d-flex justify-content-center" style="height: 50px">
       <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
     </div>
   </div>
   <h2 class="fs-2 text-center">Supporters</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
+  <div class="row justify-content-around g-5 pb-5">
+    <div class="col-auto d-flex justify-content-center" style="height: 50px">
       <img src="/assets/images/tcsc_ieee.png" class="mh-100" />
     </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
+    <div class="col-auto d-flex justify-content-center" style="height: 50px">
       <img src="/assets/images/ieee_cybermatics.png" class="mh-100" />
     </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
+    <div class="col-auto d-flex justify-content-center" style="height: 50px">
       <img src="/assets/images/SWTC2.png" class="mh-100" />
     </div>
   </div>
