--- a/program/index.html
+++ b/program/index.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 title: Program
+sponsors:
+  - image: /assets/images/ieee mb black png.png
+  - image: /assets/images/cis-logo.png
+  - image: /assets/images/IEEE-CS_LogoTM-orange.png
+  - image: /assets/images/tcsc_ieee.png
+  - image: /assets/images/IEEE_HI_TC.jpg
+  - image: /assets/images/ieee_cpss.png
 ---
 
 <!-- Hero Section -->
@@ -17,7 +24,7 @@ title: Program
 >
   <div class="hero-section">
     <div
-      class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
+      class="page-section container px-3 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
         IEEE Smart World Congress 2025 <br />Program
@@ -53,13 +60,13 @@ title: Program
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-5 pb-5 py-5 d-flex flex-column gap-4">
+  <div class="page-section w-100 px-3 pb-5 py-5 d-flex flex-column gap-4">
     {% include whova-lg-row.html %}
   </div>
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light p-0">
-  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+  <div class="page-section w-100 px-3 py-5 d-flex flex-column gap-4">
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
         <div class="mb-4">
@@ -98,24 +105,24 @@ title: Program
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4">
-  <div class="page-section w-100 px-5 pb-5 py-5 d-flex flex-column gap-4">
+  <div class="page-section w-100 px-3 pb-5 py-5 d-flex flex-column gap-4">
     <div class="row g-4">
       <div
-        class="col-sm-6 py-2 d-flex justify-content-center"
-        style="max-height: 500px; overflow: hidden"
+        class="order-2 order-sm-1 col-sm-6 py-2 d-flex justify-content-center"
+        style="overflow: hidden"
       >
         <img
           src="/assets/images/sri-gowda-pdIe9hAcaP4-unsplash.jpg"
-          class="w-100 img-fluid"
+          class="w-100 h-100 object-fit-cover"
         />
       </div>
       <div
-        class="col-sm-6 d-flex flex-column gap-2 flex-sm-column justify-content-center"
+        class="order-1 order-sm-2 col-sm-6 d-flex flex-column gap-2 flex-sm-column justify-content-center"
       >
-        <h4 class="">
+        <h3 class="">
           Saturday August 23: Explore Stunning Calgary and Its Scenic
           Surroundings with a Trip to Banff
-        </h4>
+        </h3>
         <p class="fs-5">
           Join fellow IEEE SWC 2025 participants for a group day trip to Banff
           on Saturday, August 23. Take in breathtaking mountain views, explore
@@ -124,7 +131,7 @@ title: Program
 
         <div class="d-flex flex-sm-row gap-2 flex-column">
           <a href="/travel/banff-group-trip/" class="btn btn-primary"
-            >Join a Group Trip to Banff</a
+            >Join the Group Trip to Banff</a
           >
         </div>
       </div>
@@ -136,46 +143,4 @@ title: Program
   {% include colocated-conferences.html %}
 </section>
 
-<section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
->
-  <h2 class="fs-2 text-center">Sponsors</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/cis-logo.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/tcsc_ieee.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/IEEE_HI_TC.jpg" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-3 d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/ieee_cpss.png" class="mh-100" />
-    </div>
-  </div>
-</section>
+{% include sponsors.html sponsors=page.sponsors %}
