--- a/tutorials/intelligent-network-management-for-next-generation-networks/index.html
+++ b/tutorials/intelligent-network-management-for-next-generation-networks/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 title: Tutorials - Intelligent Network Management for Next-Generation Networks
+sponsors:
+  - image: /assets/images/ieee mb black png.png
+  - image: /assets/images/cis-logo.png
+  - image: /assets/images/IEEE-CS_LogoTM-orange.png
 ---
 
 <!-- Hero Section -->
@@ -17,7 +21,7 @@ title: Tutorials - Intelligent Network Management for Next-Generation Networks
 >
   <div class="hero-section" style="min-height: 60vh">
     <div
-      class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
+      class="page-section container px-3 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
         Intelligent Network Management for Next-Generation Networks
@@ -28,7 +32,7 @@ title: Tutorials - Intelligent Network Management for Next-Generation Networks
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-3 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="d-flex flex-column gap-4">
     <div class="row">
@@ -110,28 +114,4 @@ title: Tutorials - Intelligent Network Management for Next-Generation Networks
   {% include colocated-conferences.html %}
 </section>
 
-<section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
->
-  <h2 class="fs-2 text-center">Sponsors</h2>
-  <div class="row justify-content-around gap-3 pb-5">
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/cis-logo.png" class="mh-100" />
-    </div>
-    <div
-      class="col-12 col-md-auto d-flex justify-content-center"
-      style="height: 50px"
-    >
-      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
-    </div>
-  </div>
-</section>
+{% include sponsors.html sponsors=page.sponsors %}
