--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -333,7 +333,7 @@ sponsors:
         </p>
       </div>
     </div>
-    <h3>Presenter Biographies</h3>
+    <h3>Presentation Abstracts and Presenter Biographies</h3>
     <!-- Dr. Sara Saeedi -->
     <div class="row">
       <div
@@ -350,6 +350,27 @@ sponsors:
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
+        <h4>Inclusive IoT: Building a Smart World for Everyone</h4>
+        <p>
+          The Internet of Things (IoT) is rapidly transforming how we live,
+          work, and interact with technology. Yet, as cities and systems become
+          smarter, ensuring inclusivity, diversity, accessibility, and cultural
+          relevance remains a critical challenge. This presentation explores how
+          IoT can be designed with context-awareness—adapting to users'
+          environments, cultural norms, and diversity—to serve different
+          communities and bridge socio-economic gaps. <br /><br />
+          Drawing on research in smart cities, environmental monitoring, and
+          AI-enabled sensor networks, this talk will share inclusive projects
+          ranging from a postpartum mental health app leveraging IoT and LLMs,
+          to international methane emission detection frameworks, the SCIRA
+          smart city initiative for interoperable urban systems, and a
+          participatory air quality sensing that empowers citizens through
+          IoT-enabled volunteer sensing. These case studies illustrate how
+          multidisciplinary collaboration can create IoT ecosystems that are not
+          only intelligent but also inclusive, equitable, and truly
+          human-centered—empowering all members of society to benefit from the
+          smart technologies shaping our future.
+        </p>
         <h4>Biography</h4>
         <p>
           Sara Saeedi is an Assistant Professor in Electrical and Software
@@ -377,6 +398,32 @@ sponsors:
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
+        <h4>
+          Towards Compassionate Technology: Agentic AIs for Supporting
+          Vulnerable Individuals through Human-AI Partnership
+        </h4>
+        <p>
+          As we advance toward a more connected and intelligent world, women in
+          AI and IoT are playing a critical role in shaping technologies that
+          not only innovate but also care. This talk explores how agentic
+          AIs—autonomous, context-aware systems—can be thoughtfully designed to
+          support vulnerable individuals, including the elderly, people with
+          disabilities, and those facing social or medical challenges. By
+          embedding these systems within IoT-enabled environments, we move
+          toward responsive, ethical, and inclusive solutions for real-world
+          needs. <br /><br />
+          Drawing from interdisciplinary projects led and co-led by women, this
+          presentation highlights impactful applications: an Anomaly and Fall
+          Detection System for elderly safety, a Bullying Detection and
+          Prediction System for school-based intervention, and a Gesture
+          Recognition and Text Output System that enables communication for
+          users with speech or mobility limitations. Ongoing efforts include a
+          robot-guided navigation system for visually impaired users and an
+          in-home medication support solution for independent seniors. By
+          championing diversity in tech and human-centred design, women are
+          advancing AI not just as a tool, but as a compassionate
+          partner—creating a smarter, more caring society for all.
+        </p>
         <h4>Biography</h4>
         <p>
           Rhune Huang received her B.Sc. in Electronics Technology from the
@@ -405,6 +452,22 @@ sponsors:
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
+        <h4>
+          AI and Ethics: Preparing the Next Generation for Responsible
+          Decision-Making
+        </h4>
+        <p>
+          This presentation emphasizes the critical need for human oversight in
+          AI decision-making processes to ensure that ethical considerations are
+          consistently supported. The insights shared are informed by extensive,
+          hands-on experience in academic settings, within the context of a
+          smart world ecosystem. In education, fostering critical thinking and
+          ethical decision-making when working with AI applications is
+          essential. By teaching students to critically assess the impact of AI
+          on society and engage with it responsibly, we are preparing them to
+          navigate an increasingly AI-driven world while upholding values of
+          fairness, transparency, and accountability.
+        </p>
         <h4>Biography</h4>
         <p>
           Rossitza Marinova has been a faculty member at Concordia University of
@@ -431,6 +494,31 @@ sponsors:
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
+        <h4>
+          Leadership in Convergence: How Human-AI Partnerships and Ecosystem
+          Thinking are Driving Global Robotics
+        </h4>
+        <p>
+          The global expansion of small and medium-sized enterprises (SMEs) in
+          the robotics sector is frequently hindered by a critical bottleneck:
+          the scarcity of localized, high-fidelity data required for robust
+          algorithm training and validation. This presentation introduces
+          'Ecosystem Leadership,' a novel framework that addresses this
+          challenge by forging deep Human-AI partnerships. <br /><br />
+          We present a case study demonstrating how, through this model, we
+          leverage NVIDIA's Isaac Sim and OpenUSD platforms not merely as tools,
+          but as collaborative 'AI Partners'. This partnership generates
+          synthetic data that is both technically precise and culturally
+          localized, effectively overcoming the data dilemma and enabling
+          robotics SMEs to de-risk development, accelerate international market
+          entry, and build foundational local trust. The talk concludes by
+          arguing that this leadership model—defined by its human-centric focus,
+          collaborative nature, and sustainable mindset—represents a powerful
+          and effective approach often championed by women in technology. It
+          provides a tangible blueprint for how we can lead the convergence of
+          minds and disciplines to build a more inclusive and resilient
+          intelligent future.
+        </p>
         <h4>Biography</h4>
         <p>
           With a Ph.D. from the University of Nottingham and an M.Sc. from
@@ -466,6 +554,20 @@ sponsors:
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
+        <h4>A trajectory generation for an indoor space</h4>
+        <p>
+          Human mobility simulation and trajectory generation are critical for
+          urban planning, transportation management, and privacy-preserving
+          mobility analysis. While deep generative models, such as GANs and
+          VAEs, can synthesize mobility data, they often fail to capture complex
+          environmental constraints and diverse spatiotemporal patterns, thereby
+          limiting the realism of pedestrian trajectory simulations. In this
+          presentation, I will share a diffusion-based generative framework to
+          adapt the U-Net architecture for noise prediction across diffusion
+          timesteps and to incorporate indoor map and spatial density encoders
+          to capture fine-grained spatiotemporal characteristics in indoor
+          environments.
+        </p>
         <h4>Biography</h4>
         <p>
           Kyoung-Sook Kim is Deputy Director at the Intelligent Platforms
@@ -496,6 +598,29 @@ sponsors:
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
+        <h4>AI and Education: From AI support to AI-human collaboration</h4>
+        <p>
+          AI has tremendous potential, but its greatest potential is not to do
+          work for us, but with us. In this talk, we will dive into the area of
+          AI and education and explore how AI can support learners and educators
+          as well as work in partnership with them to improve learning and
+          teaching. When building effective and smart learning environments that
+          are inclusive and consider the needs of all learners, diverse
+          perspectives are of utmost importance, particularly in the design and
+          evaluation of the underlying AI approaches. In this talk, we will
+          discuss how AI can help to consider each individual learner's needs by
+          analyzing behavioral and other data from learners and educators to
+          find characteristics of learners as well as behavior patterns that
+          lead to success or failure. In addition, we will introduce several
+          smart learning environments that consider such individual differences,
+          provide personalized recommendations, and encourage learners and
+          educators to reflect on their activities. We will start with learning
+          environments that focus on supporting learners and/or educators
+          through personalized recommendations and adaptive interfaces and then
+          investigate smart learning environments that work together with
+          learners or educators to better understand their needs and provide
+          better personalization.
+        </p>
         <h4>Biography</h4>
         <p>
           Sabine Graf is a Full Professor in Canada whose research focuses on
@@ -510,35 +635,6 @@ sponsors:
           10,000+ citations, including four best paper awards. Dr. Graf is
           frequently invited to present her work at international conferences,
           universities, and companies.
-        </p>
-      </div>
-    </div>
-    <!-- Dr. Xiaohua Feng   -->
-    <div class="row">
-      <div
-        class="col-md-3 col-sm-4 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
-      >
-        <div class="text-center">
-          <img
-            src="/assets/images/WSW - Xiaohua Feng.png"
-            alt="Dr. Xiaohua Feng  "
-            class="circle-img mb-3"
-          />
-          <h5>Dr. Xiaohua Feng</h5>
-          <h6><i>University of Bedfordshire, United Kingdom </i></h6>
-        </div>
-      </div>
-      <div class="col-md-9 col-sm-8">
-        <h4>Biography</h4>
-        <p>
-          Dr Xiaohua Feng is a Senior Lecturer at School of Computer Science and
-          Technology with expertise in Computer Security, Networked System, AI,
-          Data Science, Computer Law and Machine Leaning/Deep Leaning; focusing
-          on Computing education and pedagogics. She has been investigating
-          machine learning models for cyber security cases several AI-driven
-          methods for comms systems. She is currently working on some projects
-          on AI driven models. Currently, Dr Feng is the Ethical Officer of
-          School of Computer Science and Technology
         </p>
       </div>
     </div>
